# pyglotaran-model-language

./: .pre-commit-config.yaml  CONTRIBUTING.rst  Makefile  README.md  changelog.md  plyglound.ipynb  pyproject.toml  requirements_dev.txt  setup.cfg  test_schema.json  tox.ini
.github/: CODEOWNERS
.github/workflows/: autoupdate-pre-commit-config.yml  test.yml
docs/: Makefile  api_docs.rst  conf.py  index.rst  installation.rst  make.bat  requirements.txt  usage.rst
pyglotaran_model_language/: __init__.py  label_types.py  model.py  model_item_base.py
pyglotaran_model_language/builtin/: initial_concentration.py  irf.py  megacomplex.py
pyglotaran_model_language/top_level/: __init__.py  clp_constraint.py  clp_penalty.py  clp_relation.py  dataset.py  dataset_group.py  irf.py  k_matrix.py  shape.py
pyglotaran_model_language/utils/: doc_strings.py
pyglotaran_model_language/utils/schema_post_processing/: yaml.py
tests/: __init__.py
tests/utils/: test_doc_strings.py
