[metadata]
name = pyglotaran_model_language
version = attr: pyglotaran_model_language.__version__
description = Structural definition, post parsing validation and json schema creation of the pyglotaran model language
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/glotaran/pyglotaran-model-language
author = Sebastian Weigand
author_email = s.weigand.phy@gmail.com
license = Apache Software License 2.0
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
keywords = pyglotaran_model_language
project_urls =
    Documentation=https://pyglotaran-model-language.readthedocs.io
    Changelog=https://pyglotaran-model-language.readthedocs.io/en/latest/changelog.html
    Source=https://github.com/glotaran/pyglotaran-model-language
    Tracker=https://github.com/glotaran/pyglotaran-model-language/issues

[options]
packages = find:
install_requires =
    pydantic>=1.10.2
python_requires = >=3.10
include_package_data = True
zip_safe = False

[options.packages.find]
exclude =
    tests*
include =
    pyglotaran_model_language
    pyglotaran_model_language.*

[darglint]
docstring_style = numpy

[pydocstyle]
convention = numpy

[aliases]
test = pytest

[rstcheck]
ignore_directives = autosummary
